Fri Jul 17 01:21:32 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkarrow.c (gtk_arrow_expose): use misc->xpad for x calculation
	instead of ypad (typo).
	(gtk_arrow_set): clear all of the arrow's allocation (left a 1 pixel
 	border around the allocation).
	(gtk_arrow_init): the static requisition needs to be setup in this
	function rather than gtk_widget_new(), so arrow creation works without
	the gtk_arrow_new() constructing.
	(gtk_arrow_expose): return TRUE, since we actually handled the expose.

	* gtk/gtkwidget.c (gtk_widget_real_size_request): provide a default
 	implementation for GtkWidget::size_request, so size requisition for
 	simple statically sized widgets like GtkArrow works.

Thu Jul 16 14:16:16 PDT 1998 Manish Singh <yosh@gimp.org>

	* gtk-config.in: minor changes to gtk-config: --cflags doesn't
	prepend -I@libdir@/glib/include anymore, since glib-config handles
	it; --libs strips out redundant -L<path>'s properly (there was
	code in there to do it before, but it didn't work)

Thu Jul 16 18:24:41 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtknotebook.h: 
	* gtk/gtknotebook.c: signdness corrections all ove the place.
	implementation of object arguments: GtkNotebook::enable_popup,
 	GtkNotebook::tab_pos, GtkNotebook::tab_border, GtkNotebook::show_tabs,
	GtkNotebook::show_border, GtkNotebook::scrollable and GtkNotebook::page.
	begun implementation of child args, we have GtkNotebook::tab_label, but
	GtkNotebook::menu_label and GtkNotebook::position still lack the
	implementation.
	(gtk_notebook_remove_page):
	(gtk_notebook_current_page): allow negative indices (-1) as alias for
	the last page.

	* gtk/gtkentry.h:
	* gtk/gtkentry.c: GtkType and macro fixups. implementation of object
	arguments GtkEntry::max_length and GtkEntry::visibility.
	(gtk_entry_adjust_scroll): queue a redraw.

	* gtk/gtkeditable.h:
	* gtk/gtkeditable.c: GtkType und macro fixups. implementation of
	object arguments GtkEditable::text_position and GtkEditable::editable.